--- a/myapp/templates/shop_detail.html
+++ b/myapp/templates/shop_detail.html
@@ -30,7 +30,10 @@
   </iframe>
   {% endif %}
 
-  <a href="{{ url_for('main.search') }}">← 戻る</a>
+  <a href="{{ url_for('main.results') }}" class="menu-button">戻る</a>
+
+
+
 </body>
 </html>
 
